--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   },
   "homepage": "https://github.com/Vierheller/dgs_lora_gateway_wrapper#readme",
   "devDependencies": {
+    "@types/chokidar": "^1.7.4",
     "@types/node": "^8.5.7",
     "@types/socket.io": "^1.4.31"
   },
   "dependencies": {
+    "chokidar": "^2.0.0",
     "socket.io": "^2.0.4"
   }
 }
