--- a/config/config.json
+++ b/config/config.json
@@ -4,6 +4,6 @@
 
   "gateway_server_port":3000,
 
-  "photo_directory_path":"/",
-  "log_file_path":"/"
+  "photo_directory_path":"/home/pi/lora-gateway/ssdv/",
+  "log_file_path":"/home/pi/lora-gateway/packets.txt"
 }
