--- a/package.json
+++ b/package.json
@@ -18,9 +18,14 @@
   },
   "homepage": "https://github.com/Vierheller/dgs_lora_gateway_wrapper#readme",
   "devDependencies": {
+    "@types/chai": "^4.1.1",
     "@types/chokidar": "^1.7.4",
+    "@types/mocha": "^2.2.46",
     "@types/node": "^8.5.7",
-    "@types/socket.io": "^1.4.31"
+    "@types/socket.io": "^1.4.31",
+    "chai": "^4.1.2",
+    "mocha": "^5.0.0",
+    "ts-node": "^4.1.0"
   },
   "dependencies": {
     "chokidar": "^2.0.0",
