--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "@types/socket.io": "^1.4.31",
     "chai": "^4.1.2",
     "mocha": "^5.0.0",
-    "ts-node": "^4.1.0"
+    "ts-node": "^4.1.0",
+    "tslint": "^5.9.1"
   },
   "dependencies": {
     "chokidar": "^2.0.0",
