--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "chai": "^4.1.2",
     "mocha": "^5.0.0",
     "ts-node": "^4.1.0",
-    "tslint": "^5.9.1"
+    "tslint": "^5.9.1",
+    "typescript": "^2.7.1"
   },
   "dependencies": {
     "chokidar": "^2.0.0",
