--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "chokidar": "^2.0.0",
     "nodejs-tail": "^1.0.2",
-    "socket.io": "^2.0.4"
+    "socket.io": "^2.0.4",
+    "winston": "^2.4.0"
   }
 }
